# check-splitter-bot

./: .gitignore  Makefile  README.md  alembic.ini  example.env  pyproject.toml  setup.py
docker-compose/: monitoring.yaml  storages.yaml
src/: web.py
src/api/internal/: router.py
src/api/internal/views/: probes.py
src/bot/: bot.py  middlewares.py  utils.py  view.py
src/bot/handlers/: add_friends_handlers.py  start_handler.py
src/bot/messages/: add_friend.py  base.py  start.py
src/core/: containers.py
src/core/configs/: __init__.py  database.py  general.py  logging.py  telegram.py
src/domain/entities/: base.py  user.py
src/domain/services/: healthcheck.py  user.py
src/domain/use_cases/: base.py  user.py
src/gateways/postgresql/: database.py
src/gateways/postgresql/alembic/: env.py
src/gateways/postgresql/alembic/versions/: 2024_07_18_2246-46041a4ec5d9_.py  2024_07_26_1452-3aaa8f5da79a_.py  2024_09_03_2146-f16d103b0e83_.py  2024_09_29_2218-31f8ef7be9e0_.py
src/gateways/postgresql/models/: __init__.py  base.py  mixins.py  shop_check.py  user.py
src/gateways/postgresql/repositories/: user.py
src/project/: containers.py
src/project/configs/: __init__.py  database.py  logging.py  telegram.py
src/services/: healthcheck.py  user.py
src/utils/: aio.py
tests/: conftest.py
tests/fixtures/: database.py
tests/use_cases/: test_add_friend.py
