[tool.poetry]
name = "check-splitter-bot"
version = "0.1.0"
description = ""
authors = ["Egor <slamihin123@gmail.com>"]
readme = "README.md"
packages = [{include = "check_splitter_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.7.0"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
elastic-apm = {extras = ["opentelemetry"], version = "^6.22.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
punq = "^0.7.0"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
ipykernel = "^6.29.4"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "W291",
]